--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "dependencies": {
     "expo": "^22.0.2",
-    "react": "16.0.0-beta.5",
+    "react": "^16.0.0-beta.5",
+    "react-dom": "^16.1.1",
     "react-native": "^0.49.5",
     "react-native-maps": "^0.17.1",
+    "react-native-material-design": "^0.3.7",
     "react-navigation": "^1.0.0-beta.19"
   }
 }
